# AB_programacion

./: .gitignore  README.md
prueba_AB_progra/: CMakeLists.txt
prueba_AB_progra/Proyecto_hospital/: CMakeLists.txt  Medico.cpp  makefile
prueba_AB_progra/Proyecto_hospital/encabezado/: citaMedica.hpp  paciente.hpp
prueba_AB_progra/Proyecto_hospital/include/: CitaMedica.h  CitaMedica.hpp  GestorHospital.hpp  Medico.h  Medico.hpp  Paciente.h  Paciente.hpp  main.hpp
prueba_AB_progra/Proyecto_hospital/src/: CitaMedica.cpp  GestorHospital.cpp  Makefile  Medico.cpp  Paciente.cpp  main.cpp  prueba_AB_progra.cpp
prueba_AB_progra/prueba_AB_progra/: CMakeLists.txt  prueba_AB_progra.cpp  prueba_AB_progra.h
prueba_AB_progra/prueba_AB_progra/encabezado/: GestorHospital.hpp  citaMedica.hpp  gestionHospitalaria.hpp  medico.hpp  paciente.hpp
prueba_AB_progra/prueba_AB_progra/main/: main.cpp
prueba_AB_progra/prueba_AB_progra/rcs/: CitaMedica.cpp  Medico.cpp  Paciente.cpp
prueba_AB_progra/prueba_AB_progra/src/: CitaMedica.cpp  GestorHospital.cpp  Paciente.cpp
